--- a/dashboard/public/locales/ru/json/meta.json
+++ b/dashboard/public/locales/ru/json/meta.json
@@ -2,5 +2,10 @@
   "languages": {
     "ru": "Русский",
     "en-US": "Английский"
+  },
+  "cookies": {
+    "text": "VeniBot использует Cookie-фаилы и аналогичные технологии на своем сайте. Если вы сейчас остаетесь на сайте, это означает, что вы не возражаете против их использования.",
+    "accept": "Понятно",
+    "info": "Подробнее"
   }
 }
