--- a/dashboard/public/locales/en/json/meta.json
+++ b/dashboard/public/locales/en/json/meta.json
@@ -1,7 +1,7 @@
 {
   "languages": {
     "ru": "Russian",
-    "en-US": "English"
+    "en": "English"
   },
   "cookies": {
     "text": "VeniBot uses cookies and similar technologies on its website. By continuing your browsing after being presented with the cookie information you consent to such use.",
