--- a/dashboard/public/locales/ru/json/components/footer.json
+++ b/dashboard/public/locales/ru/json/components/footer.json
@@ -5,5 +5,7 @@
   "editLocale": "Изменить язык",
   "privacy": "Конфиденциальность",
   "supportServer": "Сервер поддержки",
+  "commands": "Команды",
+  "donate": "Пожертвования",
   "tos": "Условия использования"
 }
