Fixed typo in start.json(ru)

--- a/dashboard/public/locales/ru/json/pages/start.json
+++ b/dashboard/public/locales/ru/json/pages/start.json
@@ -23,7 +23,7 @@
       "description": "Настраивайте всё, что только захотите, начиная от префикса и заканчивая приветствиями и прощаниями участников"
     }
   },
-  "featuresTitle": "Что-же умеет VeniBot?",
+  "featuresTitle": "Что же умеет VeniBot?",
   "stats": {
     "title": "Мы растём!",
     "guilds_zero": "серверов",
